--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,26 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework 10</title>
+    <title>Homework 11</title>
   </head>
   <body>
-    <input type="text" id="search-box" />
-    <ul class="country-list"></ul>
-    <div class="country-info"></div>
+    <form  id="search-form">
+      <input class="search-form__input"
+        type="text"
+        name="searchQuery"
+        autocomplete="off"
+        placeholder="Search images..."
+      />
+      <button class="search-form__button" type="submit">Search</button>
+    </form>
+    <div class="container">
+      <div class="gallery"></div>
+      <button type="button" class="load-more">Load more</button>
+      <p class="end-text">
+        We're sorry, but you've reached the end of search results.
+      </p>
+    </div>
 
-    <script src="index.js" type="module"></script>
+    <script src="./js/index.js" type="module"></script>
   </body>
 </html>
